Исправление. Получаем данные по счёту инвестора